alterd mail and linkednin

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         padding: 0;
         box-sizing: border-box;
       }
+      a {
+        text-decoration: none;
+        color: black;
+      }
 
       body {
         font-family: "Inter", sans-serif;
@@ -365,9 +369,13 @@
       <!-- Contact Information Bar -->
       <div class="contact-bar">
         <div class="contact-item">📞 +91 9710591374</div>
-        <div class="contact-item">✉ cvela4266@gmail.com</div>
+        <a href="mailto:cvela4266@gmail.com"
+          ><div class="contact-item">✉ cvela4266@gmail.com</div></a
+        >
         <div class="contact-item">📍 Chennai, Tamil Nadu</div>
-        <div class="contact-item">💼 LinkedIn Profile</div>
+        <a href="www.linkedin.com/in/velayudhanc"
+          ><div class="contact-item">💼 LinkedIn Profile</div></a
+        >
       </div>
 
       <!-- Professional Summary -->
