--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           ><div class="contact-item">✉ cvela4266@gmail.com</div></a
         >
         <div class="contact-item">📍 Chennai, Tamil Nadu</div>
-        <a href="www.linkedin.com/in/velayudhanc"
+        <a href="https://www.linkedin.com/in/velayudhanc/"
           ><div class="contact-item">💼 LinkedIn Profile</div></a
         >
       </div>
