--- a/index.html
+++ b/index.html
@@ -383,10 +383,12 @@
         <h2 class="section-title">PROFESSIONAL SUMMARY</h2>
         <p class="summary-text">
           Certified Caterpillar Dealer Instructor and Master Demonstrator with
-          19+ years of progressive experience at GMMCO Ltd specializing in heavy
-          equipment operations, technical training, and customer support. Expert
-          in excavators, backhoe loaders, wheel loaders, and construction
-          machinery with proven track record in operator training,
+          19+ years of progressive experience at GMMCO Ltd specializing in
+          Construction , heavy ,Quarry and Mining equipment operations,
+          technical training, and customer support. Expert in Hydraulic
+          excavators, backhoe loaders, wheel loaders,Truck Type Tractor ,Skid
+          Steer Loader ,Motor Grader,Off Highway Truck, and construction
+          machinery with Recognized expertise in operator training,
           troubleshooting, preventive maintenance, and field demonstrations.
           Recognized for technical excellence, safety leadership, and customer
           satisfaction across Caterpillar dealer network operations.
