--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
         <p class="summary-text">
           Certified Caterpillar Dealer Instructor and Master Demonstrator with
           19+ years of progressive experience at GMMCO Ltd specializing in
-          Construction , heavy ,Quarry and Mining equipment operations,
-          technical training, and customer support. Expert in Hydraulic
-          excavators, backhoe loaders, wheel loaders,Truck Type Tractor ,Skid
-          Steer Loader ,Motor Grader,Off Highway Truck, and construction
-          machinery with Recognized expertise in operator training,
-          troubleshooting, preventive maintenance, and field demonstrations.
-          Recognized for technical excellence, safety leadership, and customer
-          satisfaction across Caterpillar dealer network operations.
+          Construction,heavy,Quarry and Mining equipment operations, technical
+          training, and customer support. Expert in Hydraulic excavators,
+          backhoe loaders, wheel loaders,Truck Type Tractor ,Skid Steer Loader
+          ,Motor Grader,Off Highway Truck, and construction machinery with
+          Recognized expertise in operator training, troubleshooting, preventive
+          maintenance, and field demonstrations. Recognized for technical
+          excellence, safety leadership, and customer satisfaction across
+          Caterpillar dealer network operations.
         </p>
       </div>
 
@@ -402,9 +402,10 @@
           <div class="competency-category">
             <div class="competency-title">Equipment Expertise</div>
             <div class="competency-list">
-              Caterpillar Excavators | Backhoe Loaders | Wheel Loaders | Motor
-              Graders | Skid Steer Loaders | Track-Type Tractors | Heavy
-              Equipment Operations
+              Caterpillar Hydraulic Excavators | Backhoe Loaders | Wheel Loaders
+              | Motor Graders | Skid Steer Loaders | Track-Type Tractors |
+              Off-Highway Truck | Construction Equipment | Heavy Equipment |
+              Quarry And Mining Equipments |
             </div>
           </div>
           <div class="competency-category">
@@ -412,21 +413,27 @@
             <div class="competency-list">
               Equipment Troubleshooting | Preventive Maintenance | Hydraulic
               Systems | Root Cause Analysis | Field Service | Technical
-              Diagnostics
+              Diagnostics | Equipment Servicing | Performance Optimization |
+              Skill India Assessor |
             </div>
           </div>
           <div class="competency-category">
             <div class="competency-title">Training & Development</div>
             <div class="competency-list">
               Operator Training | Product Demonstrations | Field Workshops |
-              Safety Training | Technical Mentoring | Customer Education
+              Safety Training | Technical Mentoring | Customer Education Through
+              Classrooms | Training Program Development | Performance Assessment
+              | Fuel Study | Performance Study | All Products Simulator Training
+              |
             </div>
           </div>
           <div class="competency-category">
             <div class="competency-title">Professional Skills</div>
             <div class="competency-list">
               Customer Support | Dealer Network Operations | Team Leadership |
-              Project Management | Quality Assurance | Safety Compliance
+              Project Management | Quality Assurance | Safety Compliance |
+              Documentation | Cross-Functional Collaboration | Operator Skill
+              Evaluation
             </div>
           </div>
         </div>
@@ -507,12 +514,13 @@
           <div class="cert-item">
             Caterpillar Certified Instructor & Demonstrator
           </div>
-          <div class="cert-item">320D2 Hydraulic Excavator Instructor</div>
-          <div class="cert-item">216B3 Skid Steer Loader Instructor</div>
-          <div class="cert-item">120K2 Motor Grader Instructor</div>
-          <div class="cert-item">424B2 Backhoe Loader Instructor</div>
-          <div class="cert-item">950GC Wheel Loader Instructor</div>
-          <div class="cert-item">D6R2 Track-Type Tractor Instructor</div>
+          <div class="cert-item">Hydraulic Excavator Instructor</div>
+          <div class="cert-item">Skid Steer Loader Instructor</div>
+          <div class="cert-item">Motor Grader Instructor</div>
+          <div class="cert-item">Backhoe Loader Instructor</div>
+          <div class="cert-item">Wheel Loader Instructor</div>
+          <div class="cert-item">Track-Type Tractor Instructor</div>
+          <div class="cert-item">Off Highway Truck</div>
         </div>
       </div>
 
@@ -524,7 +532,7 @@
             Diploma in Mechanical Engineering (DME)
           </div>
           <div class="university-name">
-            Karnataka State Open University | 2013-2015
+            Karnataka State Open University | 2013-2015 | Grade A
           </div>
         </div>
 
@@ -547,7 +555,8 @@
         </ul>
 
         <div class="skills-tags">
-          <div class="skill-tag">CAT 320D2</div>
+          <div class="skill-tag">CAT Machines</div>
+          <div class="skill-tag">Quarry And Mining Operations</div>
           <div class="skill-tag">Hydraulic Systems</div>
           <div class="skill-tag">Equipment Diagnostics</div>
           <div class="skill-tag">Safety Training</div>
