--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>C. Velayudhan - Professional Resume</title>
+    <i class="fa fa-envelope" style="font-size: 24px"></i>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax库/j/1.3.4/font-awesome.min.css"
+      integrity="sha512-SmFPTzatfCBqoyW0SsNQML5RV5TgbZ7seMRPvPMUA2XchJxj6nqoAzoKA9w3OwEYBgGsN7R6jgkKEm2U3BQtMIDJjkQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
@@ -370,7 +378,10 @@
       <div class="contact-bar">
         <div class="contact-item">📞 +91 9710591374</div>
         <a href="mailto:cvela4266@gmail.com"
-          ><div class="contact-item">✉ cvela4266@gmail.com</div></a
+          ><div class="contact-item">
+            <i class="fa fa-envelope" style="font-size: 24px"></i
+            >cvela4266@gmail.com
+          </div></a
         >
         <div class="contact-item">📍 Chennai, Tamil Nadu</div>
         <a href="https://www.linkedin.com/in/velayudhanc"
